# Raptor

./: .gitignore  .gitmodules  BUILD.md  CMakeLists.txt  INSTALL.md  LICENSE  LICENSE.md  Makefile  README.md  asset_fetch.py  asset_fetcher.cmake  fetch_assets.py  gen_rel_device.py  ql_to_rs.sh  raptor_version.h.in  tests.mk
Tools/Flex_LM/: CMakeLists.txt  License_manager.cpp  License_manager.hpp
Tools/Flex_LM/examples/activation/: appActUtil.c  appActUtil.xml  appActUtil_mac.xml  appActUtil_unix.xml  serverActUtil.c  serverActUtil_unix.xml
Tools/Flex_LM/examples/activation/comptranutil/: appCompTranUtil.xml  appCompTranUtil_unix.xml  compTranUtilCommand.h  compTranUtilCommandDef.c  compTranUtilContext.c  compTranUtilContext.h  compTranUtilCustom.c  compTranUtilHelper.c  compTranUtilLocal.c  compTranUtilManageRequests.h  compTranUtilMisc.c  compTranUtilResponse.c  compTranUtilSend.h  compTranUtilServer.c  compTranUtilServer.h  serverCompTranUtil.xml  serverCompTranUtil_unix.xml
Tools/Flex_LM/examples/advanced/: exinstal.c  ls_co_ex.c  ls_co_ex.h  ls_co_od.c  ls_co_od.h
Tools/Flex_LM/examples/advanced/client/: lmflex_coavail.c
Tools/Flex_LM/examples/autorecovery/ClientTSRecovery/: lmflex_recovery_V1.c  lmflex_recovery_V2.c
Tools/Flex_LM/examples/autorecovery/ServerTSRecovery/: compTranUtil.c  ts_recovery.h
Tools/Flex_LM/examples/composite/: init_composite.c  lmcompex.c
Tools/Flex_LM/examples/diagnostics/: log2file.c  log2port.c
Tools/Flex_LM/examples/ezcalc/: ezcalc.xml  ezcalcsdt.xml  ezcalcsdtplus.cpp  ezcalcsdtplus.xml  ezcalcsdtplus_mac.xml  ezcalcsdtplus_unix.xml  sdtdefs.c
Tools/Flex_LM/examples/ezcalc/1day_student/: 1day_student.asr
Tools/Flex_LM/examples/ezcalc/30day_acct/: 30day_acct.asr
Tools/Flex_LM/examples/ezcalc/30day_acct_default_config/: 30day_acct_physical.asr
Tools/Flex_LM/examples/ezcalc/30day_acct_reset/: 30day_reset.asr
Tools/Flex_LM/examples/ezcalc/30day_acct_virtual/: 30day_acct_virtual.asr
Tools/Flex_LM/examples/ezcalc/30day_trial_server/: 30day_reset_server_VM.asr  30day_trial_server_VM.asr
Tools/Flex_LM/examples/hostid/server/: ls_tpm_ex.c  ls_tpm_ex.h
Tools/Flex_LM/examples/lc_vsend/: vf_nextconf.c  vf_prime.c
Tools/Flex_LM/examples/licenses/: package
Tools/Flex_LM/examples/sdt/: lmflexsdt.c  lmflexsdt_mac.xml  lmflexsdt_unix.xml  lmflexsdt_win.xml  lmflexsdtdefs.c  lmflexsdtdefs.h
Tools/Flex_LM/machind/: deprecated.h  installs.c  lcontext.h  lm_attr.h  lm_code.h  lm_lerr.h  lm_redir_std.h  lmclient.h  lmcrypt.c  lmfeats.c  lmgr11.c  lmpolicy.h  lmsign.c  lmsign.h  lsvendor.c  version_dependent.h  version_hotfix.h
Tools/Flex_LM/machind/3server/include/: FlxAct3Server.h
Tools/Flex_LM/machind/activation/include/: FlxActBorrow.h  FlxActDiag.h  FlxActSvr.h  FlxActSystemError.h  FlxActTransaction.h
Tools/Flex_LM/machind/activation/prep_xml/: lmflex_unix.xml  tsreset_app.xml  tsreset_app_mac.xml  tsreset_app_unix.xml  tsreset_svr_mac.xml  tsreset_svr_unix.xml  vendor_daemon.xml  vendor_daemon_unix.xml
Tools/Flex_LM/machind/include/: fnptypes.h
Tools/Flex_LM/machind/sdt/Include/: fnpsdtapi.h  sdtbase.h  sdtdata.h  sdtdefault.h  sdtmarker.h  sdtplatform.h
Tools/Flex_LM/machind/sdt/Source/: sdtdata.c  sdttype.cpp
Tools/Flex_LM/x64_lsb/: BroadcastSearch.sh  appactutil  appcomptranutil  counted.lic  demo  demo.service  demo.sh  demoLF  ezcalc  ezcalcsdtplus  lm_new.c  lmcode.c  lmcrypt  lmflex  lmnewgen  lmprikey.h  lmseeds.h  lmstrip  lmstrip-symbol-map.xml  lmutil  lsrvend.c  makefile  makefile.act  rapidsil  serveractutil  uncounted.lic  yosys.lic
Tools/Flex_LM/x64_lsb-11.19.1.0_v6/examples/: README
Tools/Flex_LM/x64_lsb-11.19.1.0_v6/examples/activation/: Config.xml  serverActUtil.xml  serverActUtil_mac.xml
Tools/Flex_LM/x64_lsb-11.19.1.0_v6/examples/advanced/: get_dir.c  licstring.c
Tools/Flex_LM/x64_lsb-11.19.1.0_v6/examples/composite/: lmcomposite.c
Tools/Flex_LM/x64_lsb-11.19.1.0_v6/examples/diagnostics/: log2db.c  pylog2file.py
Tools/Flex_LM/x64_lsb-11.19.1.0_v6/examples/ezcalc/: ezcalc.c  ezcalc_mac.xml  ezcalc_unix.xml  ezcalcsdt.c  ezcalcsdt_mac.xml  ezcalcsdt_unix.xml  sdtdefs.h
Tools/Flex_LM/x64_lsb-11.19.1.0_v6/examples/lc_vsend/: lmvsend.c  vf_attr.c
Tools/Flex_LM/x64_lsb-11.19.1.0_v6/examples/licenses/: README  demo  extensions  floating  node_locked
Tools/Flex_LM/x64_lsb-11.19.1.0_v6/examples/online_reservation/: lmreserve.c
Tools/Flex_LM/x64_lsb-11.19.1.0_v6/examples/vendor_hostid/: vendor_hostid.c
Tools/Flex_LM/x64_lsb-11.19.1.0_v6/machind/: FnplmLicenseServerMsgs.mc  README  VendorLicenseServerMsgs.mc  lm_code.h  lm_code2.h  lm_lsapi.h  lm_trl.h  lmerrors.h  lmflex.c  lmgr11.def  lmgr11.h  lmhostid.h  lmhtype.h  ls_attr.h  ls_vendor.tpl  lsfeatur.h  lsmaster.h  lsserver.h  validdat.c  version_info.h
Tools/Flex_LM/x64_lsb-11.19.1.0_v6/machind/include/: fnpstdtypes.h
Tools/Flex_LM/x64_lsb-11.19.1.0_v6/x64_lsb/: WkRt-Lin-6.60.4820-500.x86_64.rpm  asrgen  counted.lic  cvdconfig  demo  expired.lic  ezcalcsdt  flexlmLF  libelf.so.0  lm_new.c  lmcrypt  lmflex  lmgrd  lmnewgen  lmobfslog  lmprikey.h  lmrand1  lmseeds.h  lmswitch  makefile  preptool  servercomptranutil  tsreset_app  tsreset_svr  uncounted.lic
Tools/Flex_LM/x64_lsb-11.19.1.0_v6/x64_lsb/ActivationSettings/: publisher.xml  sdt_publisher.xml
Tools/Flex_LM/x64_lsb/publisher/: DemoTrustedConfigIn.xml  DemoTrustedConfigOut.xml  responsegen  tcencrypt  xmlsign
Tools/Flex_LM/x64_lsb/publisher/xml/: DemoKeyout.xml  (+12 more)
src/ConfigurationRaptor/: CMakeLists.txt
src/ConfigurationRaptor/CFGDeviceDatabase/: CFGDeviceDatabase.cpp  CFGDeviceDatabase.h  CFGDeviceDatabase.py  CMakeLists.txt  routing_configurator.py
src/ConfigurationRaptor/CFGDeviceDatabase/Gemini/: config_attributes.mapping.json
src/ConfigurationRaptor/CFGDeviceDatabase/Virgo/: 1vg28_routing.py  config_attributes.mapping.json  gemini_compact_10x8_config_attributes.mapping.json  gemini_compact_22x4_config_attributes.mapping.json  gemini_compact_22x4_routing.py  gemini_compact_62x44_routing.py  icb_backdoor.py
src/ProgrammerGui/: CMakeLists.txt  main.cpp
(+931 files in other folders)
